--- a/css/books.css
+++ b/css/books.css
@@ -1,21 +1,38 @@
+*{
+    text-decoration: none !important;
+}
+
 .featured__card{
     position: relative;
     text-align: center;
-    background-color: var(--container-color);
+    background-color: whitesmoke;
     padding: 2rem;
     overflow: hidden;
-    border: 2px solid var(--border-color);
+    border: 2px solid black;
     transition: border .4s,backgrund-color .4s;
-
+    /* width: 230px; */
+    width: fit-content;
+    top: 5rem;
 }
 .featured__img{
-    width: 75px;
+    width: 150px;
     margin: 0 auto .75rem;
 }
 .featured__title{
     font-size: var(--h2-font-size);
-    margin-bottom: .5rem;
+    margin-bottom: 2.5rem;
 }
-.featured__card .button{
-    cursor: pointer;
+
+.featured__author{
+    font-size: var(--h2-font-size);
+    margin-bottom: 2.5rem;
+}
+
+.featured__container {
+width: fit-content !important;
+
+}
+
+.featured__container .featured__card .btn a{
+    color: white;
 }
