--- a/css/books.css
+++ b/css/books.css
@@ -15,11 +15,9 @@
     top: 5rem;
 }
 .featured__img{
-    width: 150px;
-
+    /* width: 150px; */
     position: left;
-    width: 100px;
-    height: 100px;
+    /* height: 100px; */
     margin: 0 auto .75rem;
 }
 .featured__title{
