--- a/css/books.css
+++ b/css/books.css
@@ -1,45 +1,9 @@
-*{
-    text-decoration: none !important;
+.pdf-list {
+	width: 80%;
 }
-
-.featured__card{
-    position: relative;
-    text-align: center;
-    background-color: whitesmoke;
-    padding: 2rem;
-    overflow: hidden;
-    border: 2px solid black;
-    transition: border .4s,backgrund-color .4s;
-    /* width: 230px; */
-    width: fit-content;
-    top: 5rem;
+.card {
+	width: 18rem;
 }
-.featured__img{
-    /* width: 150px; */
-    position: left;
-    /* height: 100px; */
-    margin: 0 auto .75rem;
-}
-.featured__title{
-    font-size: var(--h2-font-size);
-    margin-bottom: 2.5rem;
-}
-
-
-.featured__author{
-    font-size: var(--h2-font-size);
-    margin-bottom: 2.5rem;
-}
-
-.featured__container {
-width: fit-content !important;
-
-}
-
-.featured__container .featured__card .btn a{
-    color: white;
-}
-.featured__card .button{
-    cursor: pointer;
-    position: center;
+.btn{
+    margin-left: 4.5rem;
 }
