--- a/css/books.css
+++ b/css/books.css
@@ -1,3 +1,7 @@
+*{
+	text-decoration: none !important;
+}
+
 .pdf-list {
 	width: 80%;
 }
@@ -6,4 +10,12 @@
 }
 .btn{
     margin-left: 4.5rem;
+	/* set to 1.5 rem in premium section */
+
+	/* <!-- button to be added in premium section only -->
+    <!-- <a href="../uploads/files/<?=$book['file'] ?>#toolbar=0" class="btn btn-primary">Download</a> --> */
+}
+
+.category .list-group{
+	width: 200px;
 }
